--- a/template.html
+++ b/template.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-<div id="root"><!-- app --></div>
+<div id="root">
+    <!-- app -->
+</div>
 </body>
 </html>
